# xororo

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  pages.yml
docs/: app.js  index.html
src/: lib.rs  main.rs  wasm.rs
