[package]
name = "xplit"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive"] }
crc32fast = "1.5.0"
hex = "0.4.3"
rand = { version = "0.9.2", features = ["std", "std_rng"] }
rand_core = { version = "0.9.3", features = ["os_rng", "std"] }
thiserror = "2.0.17"

[dev-dependencies]
quickcheck = "1.0.3"
